[gd_scene load_steps=5 format=3 uid="uid://rqfuu652op82"]

[ext_resource type="Script" uid="uid://brknapsugro8t" path="res://addons/dice_roller/roller_box/roller_box.gd" id="1_10iax"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gg0cj"]
rough = true
bounce = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uauhm"]
albedo_color = Color(0, 0.282353, 0, 1)
rim_enabled = true
rim = 0.73
rim_tint = 0.64

[sub_resource type="Environment" id="Environment_uo4yi"]

[node name="RollerBox" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0)
disable_mode = 2
physics_material_override = SubResource("PhysicsMaterial_gg0cj")
script = ExtResource("1_10iax")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
use_collision = true
flip_faces = true
size = Vector3(10, 16, 6)
material = SubResource("StandardMaterial3D_uauhm")

[node name="DebugCamera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.62723, 15.974)

[node name="OverCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 50, 0)
keep_aspect = 0
current = true
fov = 9.90325

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.969936, -0.180272, -0.163478, -0.181251, 0.0868692, 0.979593, -0.162392, 0.979773, -0.116932, -3.32804, 5.76738, -2.54457)
light_energy = 0.278
shadow_enabled = true

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.84368, 5.34732, 1.83483)
light_color = Color(2.64719e-06, 0.557616, 0.517154, 1)
light_energy = 0.515
shadow_enabled = true
omni_range = 57.247
omni_attenuation = 1.172

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uo4yi")
